syntax = "proto3";

package configure;
option go_package = "./v1;v1";
import "validate/validate.proto";

// 获取环境列表
message AllEnvReply {
  message Env{
    uint32 id = 1;
    string keyword = 2;
    string name = 3;
    string description = 4;
    bool status = 5;
    uint32 created_at = 6;
    uint32 updated_at = 7;
  }
  repeated Env list = 1;
}

// 新增环境
message AddEnvRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1, max_len: 32}];
  string name = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 3[(validate.rules).string = {min_len: 1, max_len: 128}];
}

// 修改环境
message UpdateEnvRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string name = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 4[(validate.rules).string = {min_len: 1, max_len: 128}];
  optional bool status = 5;
}

// 获取指定环境token
message GetEnvTokenRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}

message GetEnvTokenReply {
  string token = 1;
}

// 重置token
message ResetEnvTokenRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}

message ResetEnvTokenReply{
  string token = 1;
}
// 删除环境
message DeleteEnvRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
